fix input padding
the padding was too large

--- a/css/main.css
+++ b/css/main.css
@@ -70,5 +70,5 @@ pre {
 
 #term_input {
     width: 100%;
-    padding-left: .6rem;
+    padding-left: .55rem;
 }
